force-app/main/default/objects/RWBAA_Contacts__c/RWBAA_Contacts__c.object-meta.xml
<CustomObject>
    <description>Multiservice RWBAA Contacts - Read Only</description>
    <label>RWBAA Contact</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>RWBAA Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWBAA Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>