force-app/main/default/objects/RWBAA_Contacts__c/fields/Account_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Safe_ID__c</fullName>
    <description>MSTS sends this to RW</description>
    <inlineHelpText>MSTS sends this to RW</inlineHelpText>
    <label>Account Safe ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>