force-app/main/default/objects/RWBAA_Contacts__c/fields/Contact_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Safe_ID__c</fullName>
    <description>MSTS sends this contact id to RW</description>
    <inlineHelpText>MSTS sends this contact id to RW</inlineHelpText>
    <label>Contact Safe ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>