force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Active__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Designates that the Contact is Active or Inactive for this account</description>
    <inlineHelpText>Contact is Active or Inactive for this account</inlineHelpText>
    <label>RWBAA Active</label>
    <type>Checkbox</type>
</CustomField>