force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Address_Line_1__c</fullName>
    <description>Multiservice RWBAA Contact Address Line 1</description>
    <inlineHelpText>Multiservice RWBAA Contact Address Line 1</inlineHelpText>
    <label>RWBAA Address Line 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>