force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Address_Line_2__c</fullName>
    <description>Multiservice RWBAA Contact Address Line 2</description>
    <inlineHelpText>Multiservice RWBAA Contact Address Line 2</inlineHelpText>
    <label>RWBAA Address Line 2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>