force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Address_Line_3__c</fullName>
    <description>Multiservice RWBAA Contact Address Line 3</description>
    <inlineHelpText>Multiservice RWBAA Contact Address Line 3</inlineHelpText>
    <label>RWBAA Address Line 3</label>
    <length>64</length>
    <type>Text</type>
</CustomField>