force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Bill_Send_Type__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Bill_Send_Type__c</fullName>
    <description>Multiservice RWBAA Contact Bill Send Type</description>
    <inlineHelpText>Multiservice RWBAA Contact Bill Send Type</inlineHelpText>
    <label>RWBAA Bill Send Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>