force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_BUID__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_BUID__c</fullName>
    <description>Multiservice assigned unique customer id for the account, our RWBAA Customer Id; example is 11665</description>
    <inlineHelpText>Multiservice assigned unique customer id for the account</inlineHelpText>
    <label>RWBAA BUID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>