force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_City__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_City__c</fullName>
    <description>Multiservice RWBAA City</description>
    <inlineHelpText>Multiservice RWBAA City</inlineHelpText>
    <label>RWBAA City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>