force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Contact_ID__c</fullName>
    <description>Multiservice unique identifier for a contact in their system</description>
    <externalId>true</externalId>
    <inlineHelpText>Multiservice unique identifier for a contact in their system</inlineHelpText>
    <label>RWBAA Contact ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>