force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Contact_Type__c</fullName>
    <description>Multiservice RWBAA Contact Types used to classify contacts in their system</description>
    <inlineHelpText>Multiservice RWBAA Contact Types used to classify contacts in their system</inlineHelpText>
    <label>RWBAA Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Physical Location</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>