force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Country_Code__c</fullName>
    <description>Multiservice RWBAA Contact Country 2 character code</description>
    <inlineHelpText>Multiservice RWBAA Contact Country 2 character code</inlineHelpText>
    <label>RWBAA Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>