force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Email_Address__c</fullName>
    <description>Multiservice RWBAA Contact Email Address</description>
    <inlineHelpText>Multiservice RWBAA Contact Email Address</inlineHelpText>
    <label>RWBAA Email Address</label>
    <length>128</length>
    <type>Text</type>
</CustomField>