force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_First_Name__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_First_Name__c</fullName>
    <description>Multiservice RWBAA Contact First name</description>
    <inlineHelpText>Multiservice RWBAA Contact First name</inlineHelpText>
    <label>RWBAA First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>