force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Last_Modified_DT__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Last_Modified_DT__c</fullName>
    <description>Last Timestamp on data at the time the APi picks it up</description>
    <inlineHelpText>Last Timestamp on data at the time the APi picks it up</inlineHelpText>
    <label>RWBAA Last Modified DT</label>
    <type>DateTime</type>
</CustomField>