force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Last_Name__c</fullName>
    <description>Multiservice RWBAA Last Name</description>
    <inlineHelpText>Multiservice RWBAA Last Name</inlineHelpText>
    <label>RWBAA Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>