force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Middle_Initial__c</fullName>
    <description>Multiservice RWBAA Middle Initial</description>
    <inlineHelpText>Multiservice RWBAA Middle Initial</inlineHelpText>
    <label>RWBAA Middle Initial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>