force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Phone__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Phone__c</fullName>
    <description>Multiservice RWBAA Contact Phone Number</description>
    <inlineHelpText>Multiservice RWBAA Contact Phone Number</inlineHelpText>
    <label>RWBAA Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>