force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Receive_Invoice__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Receive_Invoice__c</fullName>
    <description>Multiservice send invoice options;picklist of available combos for invoice delivery</description>
    <inlineHelpText>Multiservice send invoice options</inlineHelpText>
    <label>RWBAA Receive Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF,Attach,Consolidated</fullName>
            </value>
            <value>
                <fullName>PDF,Link,Consolidated</fullName>
            </value>
            <value>
                <fullName>PDF,Attach,Individual Invoices emailed separately</fullName>
            </value>
            <value>
                <fullName>PDF,Link,Individual Invoices emailed separately</fullName>
            </value>
            <value>
                <fullName>CSV,Attach,Consolidated</fullName>
            </value>
            <value>
                <fullName>CSV,Link,Consolidated</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Express Delivery</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>EmailAttachCSV</fullName>
                <isActive>false</isActive>
                <label>Email with Attached CSV</label>
            </value>
            <value>
                <fullName>EmailAttachPDF</fullName>
                <isActive>false</isActive>
                <label>Email with Attached PDF</label>
            </value>
            <value>
                <fullName>EmailLinkCSV</fullName>
                <isActive>false</isActive>
                <label>Email with Link to CSV</label>
            </value>
            <value>
                <fullName>EmailLinkPDF</fullName>
                <isActive>false</isActive>
                <label>Email with Link to PDF</label>
            </value>
            <value>
                <fullName>Individual</fullName>
                <isActive>false</isActive>
                <label>Individual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>