force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_State_Province_Code__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_State_Province_Code__c</fullName>
    <description>Multiservice RWBAA State/Province 2 character state code</description>
    <inlineHelpText>Multiservice RWBAA State/Province 2 character state code</inlineHelpText>
    <label>RWBAA State/Province Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>