force-app/main/default/objects/RWBAA_Contacts__c/fields/RWBAA_Zip_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>RWBAA_Zip_PostalCode__c</fullName>
    <description>Multiservice RWBAA Postal Code</description>
    <inlineHelpText>Multiservice RWBAA Postal Code</inlineHelpText>
    <label>RWBAA Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>