force-app/main/default/objects/RWBAA_Contacts__c/fields/RWfB_Account__c.field-meta.xml
<CustomField>
    <fullName>RWfB_Account__c</fullName>
    <description>RWfB Account in Salesforce for the RWBAA Contact in Multiservice</description>
    <inlineHelpText>RWfB Account in Salesforce for the RWBAA Contact in Multiservice</inlineHelpText>
    <label>RWfB Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RWBAA Contacts</relationshipLabel>
    <relationshipName>RWBAA_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>